package com.example.composecleanroom.feature_note.core.utils

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TEXTFIELD_TITLE_TAG = "TEXTFIELD_TITLE_TAG"
    const val TEXTFIELD_CONTENT_TAG = "TEXTFIELD_CONTENT_TAG"
    const val NOTE_TAG_ITEM = "NOTE_TAGS"
}