package com.example.composecleanroom.feature_note.presenter.notes.components

import androidx.compose.foundation.layout.*
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.unit.dp
import com.example.composecleanroom.feature_note.domain.utils.NoteOrder
import com.example.composecleanroom.feature_note.domain.utils.OrderType

@Composable
fun OrderSection(
    modifier: Modifier = Modifier,
    noteOrder: NoteOrder = NoteOrder.Date(OrderType.Descending),
    onOrderChange:(NoteOrder) -> Unit
) {
   Column(modifier) {
       Row(modifier = Modifier.fillMaxWidth()) {
           ToggleDefaultButton(text = "Title", selected = noteOrder is NoteOrder.Title, onSelect = {
               onOrderChange(NoteOrder.Title(noteOrder.orderType))
           })
           Spacer(modifier = Modifier.width(8.dp))
           ToggleDefaultButton(text = "Date", selected = noteOrder is NoteOrder.Date, onSelect = {
               onOrderChange(NoteOrder.Date(noteOrder.orderType))
           })
           Spacer(modifier = Modifier.width(8.dp))
           ToggleDefaultButton(text = "Color", selected = noteOrder is NoteOrder.Color, onSelect = {
               onOrderChange(NoteOrder.Color(noteOrder.orderType))
           })
       }
       Spacer(modifier = Modifier.height(16.dp))
       Row(modifier = Modifier.fillMaxWidth()) {
           ToggleDefaultButton(text = "По возростанию", selected = noteOrder.orderType is OrderType.Ascending, onSelect = {
               onOrderChange(noteOrder.copy(OrderType.Ascending))
           })
           Spacer(modifier = Modifier.width(8.dp))
           ToggleDefaultButton(text = "По убывыванию", selected = noteOrder.orderType is OrderType.Descending, onSelect = {
               onOrderChange(noteOrder.copy(OrderType.Descending))
           })
       }
   }
}