...
    val scope = rememberCoroutineScope()
    
    Scaffold(floatingActionButton = {
        FloatingActionButton(onClick = { 
            navController.navigate(Screen.AddEditNoteScreen.route)
        }, backgroundColor = MaterialTheme.colors.primary) {
            Icon(imageVector = Icons.Default.Add, contentDescription = "Добавить заметку")
        }
    }
    , scaffoldState = scaffoldState) {
        Column(modifier = Modifier
            .fillMaxSize()
            .padding(16.dp)) {
      Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween, verticalAlignment = Alignment.CenterVertically) {
          Text(text = "Ваши заметки", style = MaterialTheme.typography.h4)
          IconButton(onClick = { 
              viewModel.onEvent(NotesEvent.ToggleOrderSection)
          }) {
              Icon(imageVector = Icons.Default.Sort, contentDescription = "Сортировка")
          }
     
     
      }
      AnimatedVisibility(
          visible = state.isOrderSectionVisible,
...
