...
    val scope = rememberCoroutineScope()

    Scaffold(floatingActionButton = {
        FloatingActionButton(onClick = {
            viewModel.onEvent(AddEditevent.SaveNote)
        }, backgroundColor = MaterialTheme.colors.primary) {
         Icon(imageVector = Icons.Default.Save, contentDescription = "Сохранить")
        }
    }, scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
...
